///CHANGELOG///

--------------
---1.41
--------------

- Added support for azerty and dvorak keyboards

- Added feature to add objects on all scenes at once via the scene object tab

- Added #Echo collision tag

- Rendered actors can now use prim color and env color (so actors like bronze boulder are now displayed in their correct colors)

- Fixed an issue where if 2 textures had the same filename but different folder it would display incorrectly in SO

- Fixed an issue where SO wasnt compatible with the multitexture settings of the new blender export plugin

- Fixed an issue regarding cutscene preview and dummy points

- Fixed an issue where changing map scale during simulate n64 graphics would not refresh the viewport

- Fixed an issue in the submap editor, where clearing all the maps did not set the amount of floors for each map to 0, causing issues on reload

- Fixed an issue where the final map's floors in the submap editor were not saved

- Fixed an issue where the imagedata for only the first 8 submaps was saved

- Fixed an issue where texture swap animations couldnt be previewed when alpha was set below 255
 
- Editor properly clears all the map image data when "clear all maps" is used

- The submap editor will now open even if a scene is not open

- The submap editor will now automatically ensure that texture IDs given to floors are consecutive to minimize data usage

- The "Auto Reload" setting can now be saved


--------------
---1.40
--------------

- Flag Log does not display empty flags, improved readability

- YOff affects actor skeleton renders

- Tracks recent Global ROMs and romtool projects

- Rooms are renameable

- Changed Reverb to Sound Space and added XML's for these

- Added the necessary support for the current version z64rom to work
	- Supports the new exit system that completely skips the use of exit table
	- Global z64rom mode which lets you directly save into the project without having to constantly select the .toml