@@ -10,7 +10,7 @@
 
 - Added #Echo collision tag
 
-- Rendered actors can now use prim color and env color (so actors like bronze boulder are now displayed in their correct colors)
+- Rendered actors can now use prim color and env color (so actors like bronze boulder and fire are now displayed in their correct colors)
 
 - Fixed an issue where if 2 textures had the same filename but different folder it would display incorrectly in SO
 
@@ -27,6 +27,8 @@
 - Fixed an issue where the imagedata for only the first 8 submaps was saved
 
 - Fixed an issue where texture swap animations couldnt be previewed when alpha was set below 255
+
+- Fixed an issue where pushable block actor would appear without texture
  
 - Editor properly clears all the map image data when "clear all maps" is used
 
